objects/LM_Access_Control__c.object
<CustomObject>
    <fields>
        <fullName>Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activate</description>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddEntitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AddEntitlement</description>
        <label>AddEntitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuditTrail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Audit Trail</description>
        <inlineHelpText>Audit Trail</inlineHelpText>
        <label>AuditTrail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable/Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_License_Gateway_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_License_Gateway_Counterfeit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Counterfeit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_License_Gateway_Firm_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Firm Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_License_Gateway_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Read-Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_License_Gateway_Restricted_Rea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Restricted Read-Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_License_Gateway_Retail_Authori__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Retail Authorization User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_License_Gateway_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Register</description>
        <label>Register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncLicense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncLicense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unmerge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmerge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdateAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateAttributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ViewActivations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>View Activations</description>
        <inlineHelpText>View Activations</inlineHelpText>
        <label>ViewActivations</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>